# investimento_app

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: build_and_release.yml
app/: cli.py  config.py
app/command/: base.py  main.py  purchase_balance.py  reit.py  stock.py  utils.py
app/command/complete/: ticker.py
app/common/: aio.py  database.py  db.py  http.py  migration.py  utils.py
app/common/model/: type.py
app/enum/: scraping.py  ticker.py
app/infra/: migration.py
app/migration/versions/: 29782988794f_create_stock_and_reit_table.py  70b03b950bec_create_stock_and_reit_table.py  81e6e974aa9c_create_stock_and_reit_table.py  a758f06f71a5_create_stock_and_reit_table.py
app/model/: reit.py  stock.py  ticker.py
app/repository/: reit.py  stock.py  ticker.py
app/resource/: purchase_balance.py  reit.py  stock.py  ticker.py
app/scraping/: interface.py  reit.py  stock.py
app/scraping/dados_de_mercado/: stock.py
app/scraping/fii/: reit.py
app/scraping/investidor_10/: reit.py  stock.py
app/scraping/status_invest/: reit.py  stock.py
app/service/: purchase_balance.py  reit.py  stock.py  ticker.py
app/service/scraping/: reit.py  stock.py
migration/: env.py  script.py.mako
migration/versions/: 22e90c16a32d_add_origin_field.py  3e87d6688d30_add_ticker_table.py  81e6e974aa9c_create_stock_and_reit_table.py  cb58710e0c13_add_reit_document_field.py
script/: hook.py  poetry.py
tests/command/: test_base.py  test_main.py  test_reit.py  test_stock.py
tests/scraping/: test_reit.py  test_stock.py
tests/scraping/status_invest/: test_reit.py  test_stock.py
tests/service/: test_purchase_balance.py  test_reit.py  test_stock.py
tests/service/scraping/: test_reit.py  test_stock.py
