[project]
name = "investment-py"
version = "0.11.5"
description = "Investor Support Tool"
authors = [
    {name = "Douglas Panhota",email = "douglaspands@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "parsel (>=1.10.0,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "tenacity (>=9.0.0,<10.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "tzdata (>=2025.1,<2026.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
ipykernel = "^6.29.5"
pytest-cov = "^6.0.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.12.0"

[tool.poetry.scripts]
test = "script.poetry:test"
format = "script.poetry:format"
check = "script.poetry:check"
build = "script.poetry:build"
pycache_remove = "script.poetry:pycache_remove"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
